{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 9,
  "lineage": "78393f9b-7514-e724-979b-2744e741b0ef",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-12T06:36:20.454-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-http",
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terrible-258516/global/networks/default",
            "priority": 1000,
            "project": "terrible-258516",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrible-258516/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-11-12T06:36:20.394-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-https",
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/terrible-258516/global/networks/default",
            "priority": 1000,
            "project": "terrible-258516",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrible-258516/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20191024",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terrible-258516/zones/europe-west4-a/disks/list-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "description": "This is our Virtual Machine",
            "enable_display": false,
            "id": "list-1",
            "instance_id": "3443656921316818314",
            "label_fingerprint": "8ZKEOOQ7eHI=",
            "labels": {
              "machine_type": "n1-standard-1",
              "name": "list-1"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "foo": "bar",
              "size": "10"
            },
            "metadata_fingerprint": "kKgJ-snHMZY=",
            "metadata_startup_script": "../scripts.sh",
            "name": "list-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terrible-258516/global/networks/default",
                "network_ip": "10.164.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terrible-258516/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "terrible-258516"
              }
            ],
            "project": "terrible-258516",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrible-258516/zones/europe-west4-a/instances/list-1",
            "service_account": [
              {
                "email": "254674802714-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "europe-west4-a"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20191024",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terrible-258516/zones/europe-west4-a/disks/list-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "description": "This is our Virtual Machine",
            "enable_display": false,
            "id": "list-2",
            "instance_id": "5959546216674459018",
            "label_fingerprint": "At_vrSemUzs=",
            "labels": {
              "machine_type": "n1-standard-1",
              "name": "list-2"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "foo": "bar",
              "size": "10"
            },
            "metadata_fingerprint": "kKgJ-snHMZY=",
            "metadata_startup_script": "../scripts.sh",
            "name": "list-2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terrible-258516/global/networks/default",
                "network_ip": "10.164.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terrible-258516/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "terrible-258516"
              }
            ],
            "project": "terrible-258516",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrible-258516/zones/europe-west4-a/instances/list-2",
            "service_account": [
              {
                "email": "254674802714-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "europe-west4-a"
          }
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20191024",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terrible-258516/zones/europe-west4-a/disks/list-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "description": "This is our Virtual Machine",
            "enable_display": false,
            "id": "list-3",
            "instance_id": "6382646142242880906",
            "label_fingerprint": "oOV_hzt8ZYA=",
            "labels": {
              "machine_type": "n1-standard-1",
              "name": "list-3"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "foo": "bar",
              "size": "10"
            },
            "metadata_fingerprint": "kKgJ-snHMZY=",
            "metadata_startup_script": "../scripts.sh",
            "name": "list-3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terrible-258516/global/networks/default",
                "network_ip": "10.164.0.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terrible-258516/regions/europe-west4/subnetworks/default",
                "subnetwork_project": "terrible-258516"
              }
            ],
            "project": "terrible-258516",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terrible-258516/zones/europe-west4-a/instances/list-3",
            "service_account": [
              {
                "email": "254674802714-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "europe-west4-a"
          }
        }
      ]
    }
  ]
}